OPENNLP-1735: Upgrade minimum JDK level to 21 LTS - adjusts pom.xml - adjusts GH actions - replace new Locale(..) with Locale.of(..) - replaces new URL(..) with new URI(..).toURL()