@@ -20,6 +20,8 @@ package opennlp.tools;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -47,11 +49,19 @@ public abstract class AbstractModelLoaderTest {
           "sv", "tr", "uk");
 
   protected static void downloadVersion15Model(String modelName) throws IOException {
-    downloadModel(new URL(BASE_URL_MODELS_V15 + modelName));
+    downloadModel(toModelURL(BASE_URL_MODELS_V15 + modelName));
   }
 
   protected static void downloadVersion183Model(String modelName) throws IOException {
-    downloadModel(new URL(BASE_URL_MODELS_V183 + modelName));
+    downloadModel(toModelURL(BASE_URL_MODELS_V183 + modelName));
+  }
+
+  private static URL toModelURL(String location) throws IOException {
+    try {
+      return new URI(location).toURL();
+    } catch (URISyntaxException e) {
+      throw new IOException(e);
+    }
   }
 
   private static void downloadModel(URL url) throws IOException {
